--- a/event.html
+++ b/event.html
@@ -212,10 +212,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                     <table>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td>Game.Hour</td>
@@ -250,10 +250,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                         </colgroup>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td rowspan="3">Game.AnyPlayer.Defeat</td>
@@ -835,10 +835,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                     <table>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td rowspan="4">Actor.AddBuff</td>
@@ -1101,10 +1101,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                     <table>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">Block.Add</td>
@@ -1207,10 +1207,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                     <table>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td rowspan="3">DropItem.AreaIn</td>
@@ -1401,10 +1401,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                     <table>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td rowspan="3">Particle.Mob.OnCreate</td>
@@ -1469,10 +1469,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                     <table>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td rowspan="3">UI.Button.Click</td>
@@ -1575,10 +1575,10 @@ ScriptSupportEvent:registerEvent(<span class="math">[=[Block.Trigger]=]</span>, 
                     <table>
                         <tbody>
                             <tr>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Tên</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Cách Sử Dụng</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Các Tham Số</td>
-                                <td style="font-weight: bold;font-size: larger;color: #00ffff;">Mô Tả Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Tên</td>
+                                <td style="font-weight: bold;font-size: larger;">Cách Sử Dụng</td>
+                                <td style="font-weight: bold;font-size: larger;">Các Tham Số</td>
+                                <td style="font-weight: bold;font-size: larger;">Mô Tả Tham Số</td>
                             </tr>
                             <tr>
                                 <td>BluePrint.BuildBegin</td>
