--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword" content="miniworld,MiniWorld,MW,mw,mwwiki,MWWIKI,mwapi,MWAPI,MWAPIWIKI">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body>js/
     <div class="sidebar close">
         <div class="home-content">
             <i class="fas fa-bars"></i>
@@ -122,6 +122,6 @@
         </section>
     </div>
 </body>
-<script src="sidebar.js"></script>
-<script src="section.js"></script>
+<script src="js/sidebar.js"></script>
+<script src="js/section.js"></script>
 </html>
