--- a/other/texteditor/index.html
+++ b/other/texteditor/index.html
@@ -27,8 +27,8 @@
             border: none;
             cursor: pointer;
         }
-        .dev-wiki{
-            padding-right: 0;
+        iframe{
+            margin-left: 0;
             width: 100px;
         }
     </style>
@@ -42,7 +42,7 @@
 }</div>
 <div id="devWiki" class="dev-wiki">
     <div id="devWikiBar" class="dev-wiki-bar"></div>
-    <iframe src="https://developers.miniworldgame.com/wiki/" frameborder="0"></iframe>
+    <iframe src="https://developers.mini1.cn/wiki/" frameborder="0"></iframe>
     <button type="button" id="toggleWikiBtn" class="btn toggle-wiki-btn">Wiki</button>
   </div>
     <!-- Nút để copy văn bản và màu -->
