--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>js/
+<body>
     <div class="sidebar close">
         <div class="home-content">
             <i class="fas fa-bars"></i>
@@ -25,7 +25,6 @@
                     <li><a href="/html/editscript.html">Cách Chỉnh Sửa Kịch Bản</a></li>
                 </ul>
             </li>
-
             <li>
                 <div class="icon-link">
                     <a>
@@ -34,14 +33,12 @@
                     </a>
                     <i class="fas fa-caret-down arrow"></i>
                 </div>
-
                 <ul class="sub-menu">
                     <li><a class="link-name">Hướng Dẫn Cơ Bản</a></li>
                     <li><a href="/html/scriptaccess.html">Cách Truy Cập Script</a></li>
                     <li><a href="/html/editscript.html">Cách Chỉnh Sửa Kịch Bản</a></li>
                 </ul>
             </li>
-
             <li>
                 <div class="icon-link">
                     <a>
@@ -50,7 +47,6 @@
                     </a>
                     <i class="fas fa-caret-down arrow"></i>
                 </div>
-
                 <ul class="sub-menu">
                     <li><a class="link-name">Giới Thiệu</a></li>
                     <li><a href="/html/lua.html">LUA Là Gì</a></li>
@@ -58,7 +54,6 @@
                     <li><a href="/html/luacase.html">Ví Dụ Về Các Chức Năng Của LUA</a></li>
                 </ul>
             </li>
-
             <li>
                 <div class="icon-link">
                     <a>
@@ -67,7 +62,6 @@
                     </a>
                     <i class="fas fa-caret-down arrow"></i>
                 </div>
-
                 <ul class="sub-menu">
                     <li><a href="/html/#" class="link-name">Script</a></li>
                     <li><a href="/html/event.html">Sự Kiện</a></li>
@@ -87,15 +81,12 @@
                     <li><a href="/html/backpack.html">Quản Lí Túi Đồ</a></li>
                     <li><a href="/html/objectlib.html">Quản Lí Đối Tượng</a></li>
                     <li><a href="/html/varlib2.html">Quản Lí Biến</a></li>
-                    <li><a href="/html/worldcontainer.html">Quản Lí Vật Chứa/Container Management Interface(Cần Góp Ý
-                            Dịch)</a></li>
-                    <li><a href="/html/mapmark.html">Quản Lí Đánh Dấu Thế Giới/Minimap Management Interface(Cần Góp Ý
-                            Dịch)(Không Hoạt Động)</a></li>
+                    <li><a href="/html/worldcontainer.html">Quản Lí Vật Chứa/Container Management Interface(Cần Góp Ý Dịch)</a></li>
+                    <li><a href="/html/mapmark.html">Quản Lí Đánh Dấu Thế Giới/Minimap Management Interface(Cần Góp Ý Dịch)(Không Hoạt Động)</a></li>
                     <li><a href="/html/spawnport.html">Quản Lí Điểm Hồi Sinh</a></li>
                     <li><a href="/html/timer.html">Quản Lí Bộ Đếm Giờ</a></li>
-                    <li><a href="/html/graphic.html">Quản Lí Đồ Họa/Graphics and text information management interface(Không
-                            Hoạt Động)</a></li>
-                    <li><a href="/html/listenparam.html">Function monitoring managementinterface</a></li>
+                    <li><a href="/html/graphic.html">Quản Lí Đồ Họa/Graphics and text information management interface(Không Hoạt Động)</a></li>
+                    <li><a href="/html/listenparam.html">Function monitoring management interface</a></li>
                     <li><a href="/html/valuegroup.html">Quản Lí Nhóm Biến</a></li>
                     <li><a href="/html/costomui.html">Quản Lí UI</a></li>
                     <li><a href="/html/displayboard.html">Quản Lí Bảng Hiện Thị</a></li>
@@ -122,6 +113,6 @@
         </section>
     </div>
 </body>
-<script src="js/sidebar.js"></script>
-<script src="js/section.js"></script>
+<script src="/js/sidebar.js"></script>
+<script src="/js/section.js"></script>
 </html>
